@@ -129,7 +129,7 @@ typedef struct _sapi_globals_struct {
 	long post_max_size;
 	int options;
 	zend_bool sapi_started;
-	time_t global_request_time;
+	double global_request_time;
 	HashTable known_post_content_types;
 } sapi_globals_struct;
 
@@ -208,7 +208,7 @@ SAPI_API int sapi_force_http_10(TSRMLS_D);
 
 SAPI_API int sapi_get_target_uid(uid_t * TSRMLS_DC);
 SAPI_API int sapi_get_target_gid(gid_t * TSRMLS_DC);
-SAPI_API time_t sapi_get_request_time(TSRMLS_D);
+SAPI_API double sapi_get_request_time(TSRMLS_D);
 SAPI_API void sapi_terminate_process(TSRMLS_D);
 END_EXTERN_C()
 
